# Civatas-TW

./: .gitignore  CLAUDE.md  README.md
Paper/: .env.example  .gitignore  README.md  pyproject.toml  start_ui.sh
Paper/docs/: 00_README.md  01_RESEARCH_PLAN.md  02_CLAUDE_CODE_TASKS.md  03_QUICK_START.md  04_REFUSAL_LABELING_RULES.md
Paper/experiments/news_pool_2024_jan/: README.md  excluded_articles.jsonl  ingestion_metadata.json  merged_pool.jsonl  merged_pool.sha256  stage_a_output.jsonl  stage_b_output.jsonl  stage_c_output.jsonl
Paper/experiments/persona_slates/: slate_seed20240113_n300.jsonl
Paper/experiments/refusal_calibration/: responses_n20.csv  responses_n20.jsonl  responses_n20.labeled.jsonl  (+8 more)
Paper/paper_figures/: bootstrap_ci.json  flagship_sensitivity_comparison.json  full_recount_snapshot.txt  table1_per_vendor_breakdown.csv  table1_per_vendor_breakdown.tex
Paper/paper_source/: .gitignore  ARXIV_SUBMISSION.md  ENDORSEMENT_EMAILS.md  FB_ANNOUNCEMENT.md  Makefile  PAPER_ZH.md  README.md  main.tex  refs.bib
Paper/scripts/: compute_bootstrap_ci.py  flagship_sensitivity_analyze.py  flagship_sensitivity_fetch.py  full_recount.py  make_arxiv_bundle.sh  make_paper_figures.py
Paper/tests/: test_analytics_bootstrap.py  test_analytics_corrections.py  test_analytics_jsd.py  test_analytics_nemd.py  test_analytics_pipelines.py  test_blind_validation.py  test_feed_resolver.py  test_feed_sources_snapshot.py  test_persona_slate.py  test_pricing.py  test_refusal_stats.py  test_schemas.py  test_storage_db.py  test_vendor_router.py  test_webui_labeling.py
(+168 files in other folders)
